# IRIS

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
IRIS_example/1uts/: 1uts.mol2  1uts_lig.sd
IRIS_example/1uts_expected_output/: 1uts_IRIS_sorted.sdf  1uts_docking_out_sorted.sd  1uts_docking_out_sorted.sdf  1uts_rdkit_full.txt  descriptors.txt  descriptors_all.txt  descriptors_all_old.txt  descriptors_full.txt  distances.txt  hbonds.txt  lig_pcd.txt  msa_sasa.txt  nonpolars.txt  polar_contacts.txt  rdkit_3D_descriptors.txt  receptor_naffinity_descriptors.txt  scores_output.txt  vdw_strain.txt
IRIS_example/7lng_expected_output/: 7lng.mol2  7lng_IRIS_sorted.sdf  7lng_docking_out_sorted.sd  7lng_docking_out_sorted.sdf  7lng_lig.sd  7lng_rdkit_full.txt  descriptors.txt  descriptors_all.txt  descriptors_all_old.txt  descriptors_full.txt  distances.txt  lig_pcd.txt  msa_sasa.txt  nonpolars.txt  (+4 more)
IRIS_model/: IRIS.pkl
IRIS_models/: RL_dock.pkl  TS_dock.pkl
scripts/: IRIS.py  IRIS_RL_dock.py  IRIS_RL_dock_solv.py  IRIS_RL_dock_solv_deprecated.py  IRIS_TS_dock.py  IRIS_TS_dock_deprecated.py  IRIS_TS_dock_solv.py  IRIS_TS_dock_solv_deprecated.py  auto_rmsd.py  automate_cades_many.py  cav_volume.py  consolidate_all.py  consolidate_scores.py  consolidate_scores_and_rmsd.py  distances.py  generate_descriptors.py  get_features.py  get_nonpolarcontacts.py  hbonds.py  lig_sd2pdb.py  nohup.out  polar.py  rdkit_3d_descriptors.py  rdkit_descriptors.py  rdkit_full.py  receptor_descriptors.py  rmsd.py  rmsd_trends.py  run_iris_batch.py  sasa_msa.py  sd2sdf.py  ts_prm_maker.py  vdw.py
tests/: test_cli.py  test_features.py  test_predict.py
(+4 files in other folders)
